--- a/index.ipynb
+++ b/index.ipynb
@@ -126,8 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = list(map(lambda restaurant: dict(name=restaurant['name']\n",
-    "                                          ), yelp_restaurants))\n",
+    "names = list(map(lambda restaurant: dict(name=restaurant['name']), yelp_restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
