--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,9 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fork & Fig'},\n",
+       " {'name': 'Salt And Board'},\n",
+       " {'name': 'Frontier Restaurant'},\n",
+       " {'name': 'Nexus Brewery'},\n",
+       " {'name': \"Devon's Pop Smoke\"},\n",
+       " {'name': 'Cocina Azul'},\n",
+       " {'name': 'Philly Steaks'},\n",
+       " {'name': 'Stripes Biscuit'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names = list(map(lambda restaurant: dict(name=restaurant['name']), yelp_restaurants))\n",
     "names\n",
