--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = = list(map(lambda restaurant: restaurant['name'], review_counts))\n",
+    "total_reviews = = listmap(lambda restaurant: restaurant['name'], review_counts))\n",
     "total_reviews # 3420"
    ]
   },
