--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "total_reviews = map(total_reviews.append(review_count), review_counts)\n",
+    "total_reviews = map(total_reviews.append(review_counts), review_counts)\n",
     "total_reviews # 3420"
    ]
   },
