--- a/index.ipynb
+++ b/index.ipynb
@@ -193,22 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7f9d882a6630>"
+       "3420"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = sum(, )review_counts)\n",
+    "total_reviews = sum(review_counts)\n",
     "total_reviews # 3420"
    ]
   },
