--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    list(map(format_restraurant))"
+    "    list(map(format_restraurant, res))"
    ]
   },
   {
