--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    filter(restaurants['is_closed'], )"
+    "    list(filter(restaurants['is_closed'], ))"
    ]
   },
   {
