--- a/index.ipynb
+++ b/index.ipynb
@@ -356,12 +356,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurants['is_closed'], restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['is_closed'], restaurants))"
    ]
   },
   {
