--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['r'] == False, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['review_counts'] == False, restaurants))"
    ]
   },
   {
